# squanch

./: .gitignore  README.md  conanfile.py  test.bat
include/squanch/: Array2D.h  Circle.h  CurveAlgorithms.h  Extrude.h  IgaAlgorithms.h  Line.h  Model.h  MortarConnector.h  Nurbs.h  NurbsCurve.h  PatchBase.h  PointContainerTypes.h  PointInversion.h  RectangleXy.h  Refinement.h  RuledSurface.h  SurfaceAlgorithms.h  Transformation.h  UtilityDetail.h  knit.h
squanch-tester/: CMakeLists.txt  CurveAlgorithms.cpp  DornischGeometry.cpp  Extrude.cpp  PointInversion.cpp  RuledSurface.cpp  SlopedRectangle.cpp  SlopedRectangle3D.cpp  Transformation.cpp  circle.cpp  conanfile.py  generate.bat  main.cpp
squanch-tester/src/: CurveAlgorithms.cpp  DebugTools.h  DornischGeometry.cpp  Extrude.cpp  ModelTester.cpp  MortarConnector.cpp  PointInversion.cpp  RectangleBasisDerivatives.cpp  RuledSurface.cpp  SlopedRectangle.cpp  SlopedRectangle3D.cpp  TestUtils.h  Transformation.cpp  circle.cpp  igafem.cpp  igafem.h  refinement.cpp
test_package/: conanfile.py  example.cpp
